--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Thu Jul 31 18:23:05 CDT 2014
+#Mon Aug 04 16:10:37 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -32,23 +32,16 @@ Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 Mcu.Pin10=PI10
-Mcu.Pin100=PB5
-Mcu.Pin101=PB6
-Mcu.Pin102=PB7
-Mcu.Pin103=PB8
-Mcu.Pin104=PB9
-Mcu.Pin105=PE0
-Mcu.Pin106=PE1
-Mcu.Pin107=PI4
-Mcu.Pin108=PI5
-Mcu.Pin109=PI6
+Mcu.Pin100=PI4
+Mcu.Pin101=PI5
+Mcu.Pin102=PI6
+Mcu.Pin103=PI7
+Mcu.Pin104=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin105=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin106=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin107=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin108=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin11=PI11
-Mcu.Pin110=PI7
-Mcu.Pin111=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin112=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin113=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin114=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin115=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin12=PF0
 Mcu.Pin13=PF1
 Mcu.Pin14=PF2
@@ -65,87 +58,87 @@ Mcu.Pin23=PH0/OSC_IN
 Mcu.Pin24=PH1/OSC_OUT
 Mcu.Pin25=PC0
 Mcu.Pin26=PC1
-Mcu.Pin27=PC3
-Mcu.Pin28=PA0/WKUP
-Mcu.Pin29=PH2
+Mcu.Pin27=PA0/WKUP
+Mcu.Pin28=PH2
+Mcu.Pin29=PH3
 Mcu.Pin3=PE5
-Mcu.Pin30=PH3
-Mcu.Pin31=PH4
-Mcu.Pin32=PH5
-Mcu.Pin33=PA3
-Mcu.Pin34=PA4
-Mcu.Pin35=PA5
-Mcu.Pin36=PA6
-Mcu.Pin37=PA7
-Mcu.Pin38=PE9
-Mcu.Pin39=PE11
+Mcu.Pin30=PH4
+Mcu.Pin31=PH5
+Mcu.Pin32=PA3
+Mcu.Pin33=PA4
+Mcu.Pin34=PA5
+Mcu.Pin35=PA6
+Mcu.Pin36=PA7
+Mcu.Pin37=PE9
+Mcu.Pin38=PE11
+Mcu.Pin39=PE13
 Mcu.Pin4=PE6
-Mcu.Pin40=PE13
-Mcu.Pin41=PE14
-Mcu.Pin42=PB10
-Mcu.Pin43=PH7
-Mcu.Pin44=PH8
-Mcu.Pin45=PH10
-Mcu.Pin46=PH11
-Mcu.Pin47=PH12
-Mcu.Pin48=PB12
-Mcu.Pin49=PB13
+Mcu.Pin40=PE14
+Mcu.Pin41=PH7
+Mcu.Pin42=PH8
+Mcu.Pin43=PH10
+Mcu.Pin44=PH11
+Mcu.Pin45=PH12
+Mcu.Pin46=PB13
+Mcu.Pin47=PB14
+Mcu.Pin48=PB15
+Mcu.Pin49=PD8
 Mcu.Pin5=PI8
-Mcu.Pin50=PB14
-Mcu.Pin51=PB15
-Mcu.Pin52=PD8
-Mcu.Pin53=PD9
-Mcu.Pin54=PD10
-Mcu.Pin55=PD11
-Mcu.Pin56=PD12
-Mcu.Pin57=PD13
-Mcu.Pin58=PD14
-Mcu.Pin59=PG2
+Mcu.Pin50=PD9
+Mcu.Pin51=PD10
+Mcu.Pin52=PD11
+Mcu.Pin53=PD12
+Mcu.Pin54=PD13
+Mcu.Pin55=PD14
+Mcu.Pin56=PG2
+Mcu.Pin57=PG3
+Mcu.Pin58=PC6
+Mcu.Pin59=PC7
 Mcu.Pin6=PC13
-Mcu.Pin60=PG3
-Mcu.Pin61=PC6
-Mcu.Pin62=PC7
-Mcu.Pin63=PC8
-Mcu.Pin64=PC9
-Mcu.Pin65=PA8
-Mcu.Pin66=PA9
-Mcu.Pin67=PA10
-Mcu.Pin68=PA11
-Mcu.Pin69=PA12
+Mcu.Pin60=PC8
+Mcu.Pin61=PC9
+Mcu.Pin62=PA8
+Mcu.Pin63=PA9
+Mcu.Pin64=PA10
+Mcu.Pin65=PA11
+Mcu.Pin66=PA12
+Mcu.Pin67=PA13
+Mcu.Pin68=PH13
+Mcu.Pin69=PH14
 Mcu.Pin7=PC14/OSC32_IN
-Mcu.Pin70=PA13
-Mcu.Pin71=PH13
-Mcu.Pin72=PH14
-Mcu.Pin73=PH15
-Mcu.Pin74=PI0
-Mcu.Pin75=PI1
-Mcu.Pin76=PI2
-Mcu.Pin77=PI3
-Mcu.Pin78=PA14
-Mcu.Pin79=PA15
+Mcu.Pin70=PH15
+Mcu.Pin71=PI1
+Mcu.Pin72=PI3
+Mcu.Pin73=PA14
+Mcu.Pin74=PA15
+Mcu.Pin75=PC10
+Mcu.Pin76=PC11
+Mcu.Pin77=PC12
+Mcu.Pin78=PD0
+Mcu.Pin79=PD1
 Mcu.Pin8=PC15/OSC32_OUT
-Mcu.Pin80=PC10
-Mcu.Pin81=PC11
-Mcu.Pin82=PC12
-Mcu.Pin83=PD0
-Mcu.Pin84=PD1
-Mcu.Pin85=PD2
-Mcu.Pin86=PD3
-Mcu.Pin87=PD4
-Mcu.Pin88=PD5
-Mcu.Pin89=PD6
+Mcu.Pin80=PD2
+Mcu.Pin81=PD3
+Mcu.Pin82=PD4
+Mcu.Pin83=PD5
+Mcu.Pin84=PD6
+Mcu.Pin85=PD7
+Mcu.Pin86=PG9
+Mcu.Pin87=PG10
+Mcu.Pin88=PG11
+Mcu.Pin89=PG12
 Mcu.Pin9=PI9
-Mcu.Pin90=PD7
-Mcu.Pin91=PG9
-Mcu.Pin92=PG10
-Mcu.Pin93=PG11
-Mcu.Pin94=PG12
-Mcu.Pin95=PG13
-Mcu.Pin96=PG14
-Mcu.Pin97=PG15
-Mcu.Pin98=PB3
-Mcu.Pin99=PB4
-Mcu.PinsNb=116
+Mcu.Pin90=PG13
+Mcu.Pin91=PG14
+Mcu.Pin92=PG15
+Mcu.Pin93=PB3
+Mcu.Pin94=PB4
+Mcu.Pin95=PB5
+Mcu.Pin96=PB8
+Mcu.Pin97=PB9
+Mcu.Pin98=PE0
+Mcu.Pin99=PE1
+Mcu.PinsNb=109
 Mcu.UserName=STM32F427IGTx
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SysTick_IRQn=true\:0\:0
@@ -182,10 +175,6 @@ PA8.Signal=RCC_MCO_1
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
-PB10.Locked=true
-PB10.Signal=I2S2_CK
-PB12.Locked=true
-PB12.Signal=I2S2_WS
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
@@ -201,16 +190,13 @@ PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.Locked=true
 PB5.Signal=GPIO_Output
-PB6.Locked=true
-PB6.Signal=USART1_TX
-PB7.Locked=true
-PB7.Signal=USART1_RX
 PB8.Locked=true
 PB8.Signal=GPIO_Output
 PB9.Locked=true
 PB9.Signal=GPIO_Output
 PC0.Signal=ADCx_IN10
-PC1.Signal=ADCx_IN11
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.Mode=Full_Duplex_Master
@@ -223,8 +209,6 @@ PC14/OSC32_IN.Mode=LSE-External-Oscillator
 PC14/OSC32_IN.Signal=RCC_OSC32_IN
 PC15/OSC32_OUT.Mode=LSE-External-Oscillator
 PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
-PC3.Locked=true
-PC3.Signal=I2S2_SD
 PC6.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
 PC6.GPIO_Label=RGB_LED1_R
 PC6.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
@@ -444,16 +428,12 @@ PH7.Mode=I2C
 PH7.Signal=I2C3_SCL
 PH8.Mode=I2C
 PH8.Signal=I2C3_SDA
-PI0.Locked=true
-PI0.Signal=S_TIM5_CH4
 PI1.Locked=true
 PI1.Signal=GPIO_Output
 PI10.Locked=true
 PI10.Signal=GPIO_Output
 PI11.Locked=true
 PI11.Signal=GPIO_Output
-PI2.Locked=true
-PI2.Signal=S_TIM8_CH4
 PI3.Locked=true
 PI3.Signal=GPIO_Input
 PI4.Locked=true
@@ -511,8 +491,6 @@ RCC.RCC_MCO1Source=RCC_MCO1SOURCE_LSE
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
-SH.ADCx_IN11.0=ADC1_IN11,IN11
-SH.ADCx_IN11.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
@@ -541,16 +519,12 @@ SH.S_TIM5_CH2.0=TIM5_CH2,PWM Generation2 CH2
 SH.S_TIM5_CH2.ConfNb=1
 SH.S_TIM5_CH3.0=TIM5_CH3,PWM Generation3 CH3
 SH.S_TIM5_CH3.ConfNb=1
-SH.S_TIM5_CH4.0=TIM5_CH4
-SH.S_TIM5_CH4.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
-SH.S_TIM8_CH4.0=TIM8_CH4
-SH.S_TIM8_CH4.ConfNb=1
 SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
 SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
@@ -594,11 +568,11 @@ TIM1.OCPolarity_4-PWM\ Generation4\ CH4=TIM_OCPOLARITY_LOW
 TIM1.OffStateIDLEMode=TIM_OSSI_DISABLE
 TIM1.OffStateRunMode=TIM_OSSR_DISABLE
 TIM1.Period=1000
-TIM1.Prescaler=10500
-TIM1.Pulse-PWM\ Generation1\ CH1=500
-TIM1.Pulse-PWM\ Generation2\ CH2=500
-TIM1.Pulse-PWM\ Generation3\ CH3=500
-TIM1.Pulse-PWM\ Generation4\ CH4=500
+TIM1.Prescaler=2000
+TIM1.Pulse-PWM\ Generation1\ CH1=250
+TIM1.Pulse-PWM\ Generation2\ CH2=250
+TIM1.Pulse-PWM\ Generation3\ CH3=250
+TIM1.Pulse-PWM\ Generation4\ CH4=250
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -643,12 +617,15 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Channel-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
+TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
+TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
 TIM8.OCPolarity_1-PWM\ Generation1\ CH1=TIM_OCPOLARITY_LOW
 TIM8.OCPolarity_2-PWM\ Generation2\ CH2=TIM_OCPOLARITY_LOW
 TIM8.OCPolarity_3-PWM\ Generation3\ CH3=TIM_OCPOLARITY_LOW
 TIM8.Period=1000
-TIM8.Prescaler=10500
+TIM8.Prescaler=21000
 TIM8.Pulse-PWM\ Generation1\ CH1=500
 TIM8.Pulse-PWM\ Generation2\ CH2=500
 TIM8.Pulse-PWM\ Generation3\ CH3=500
