Unscrewed default timer values in Configuration.ioc - (Still requires rebuild+testing)

--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Fri Aug 08 05:57:28 CDT 2014
+#Wed Aug 13 01:55:52 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -31,114 +31,111 @@ Mcu.Name=STM32F427I(G-I)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PI10
-Mcu.Pin100=PI4
-Mcu.Pin101=PI5
-Mcu.Pin102=PI6
-Mcu.Pin103=PI7
-Mcu.Pin104=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin105=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin106=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin107=VP_TIM5_VS_ClockSourceINT
-Mcu.Pin108=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin11=PI11
-Mcu.Pin12=PF0
-Mcu.Pin13=PF1
-Mcu.Pin14=PF2
-Mcu.Pin15=PF3
-Mcu.Pin16=PF4
-Mcu.Pin17=PF5
-Mcu.Pin18=PF6
-Mcu.Pin19=PF7
+Mcu.Pin10=PF0
+Mcu.Pin100=PI7
+Mcu.Pin101=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin102=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin103=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin104=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin105=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin11=PF1
+Mcu.Pin12=PF2
+Mcu.Pin13=PF3
+Mcu.Pin14=PF4
+Mcu.Pin15=PF5
+Mcu.Pin16=PF6
+Mcu.Pin17=PF7
+Mcu.Pin18=PF8
+Mcu.Pin19=PF9
 Mcu.Pin2=PE4
-Mcu.Pin20=PF8
-Mcu.Pin21=PF9
-Mcu.Pin22=PF10
-Mcu.Pin23=PH0/OSC_IN
-Mcu.Pin24=PH1/OSC_OUT
-Mcu.Pin25=PC0
-Mcu.Pin26=PC1
-Mcu.Pin27=PA0/WKUP
-Mcu.Pin28=PH2
-Mcu.Pin29=PH3
+Mcu.Pin20=PF10
+Mcu.Pin21=PH0/OSC_IN
+Mcu.Pin22=PH1/OSC_OUT
+Mcu.Pin23=PC0
+Mcu.Pin24=PC1
+Mcu.Pin25=PA0/WKUP
+Mcu.Pin26=PH2
+Mcu.Pin27=PH3
+Mcu.Pin28=PH4
+Mcu.Pin29=PH5
 Mcu.Pin3=PE5
-Mcu.Pin30=PH4
-Mcu.Pin31=PH5
-Mcu.Pin32=PA3
-Mcu.Pin33=PA4
-Mcu.Pin34=PA5
-Mcu.Pin35=PA6
-Mcu.Pin36=PA7
-Mcu.Pin37=PE9
-Mcu.Pin38=PE11
-Mcu.Pin39=PE13
+Mcu.Pin30=PA3
+Mcu.Pin31=PA4
+Mcu.Pin32=PA5
+Mcu.Pin33=PA6
+Mcu.Pin34=PA7
+Mcu.Pin35=PE9
+Mcu.Pin36=PE11
+Mcu.Pin37=PE13
+Mcu.Pin38=PE14
+Mcu.Pin39=PH7
 Mcu.Pin4=PE6
-Mcu.Pin40=PE14
-Mcu.Pin41=PH7
-Mcu.Pin42=PH8
-Mcu.Pin43=PH10
-Mcu.Pin44=PH11
-Mcu.Pin45=PH12
-Mcu.Pin46=PB13
-Mcu.Pin47=PB14
-Mcu.Pin48=PB15
-Mcu.Pin49=PD8
+Mcu.Pin40=PH8
+Mcu.Pin41=PH10
+Mcu.Pin42=PH11
+Mcu.Pin43=PH12
+Mcu.Pin44=PB13
+Mcu.Pin45=PB14
+Mcu.Pin46=PB15
+Mcu.Pin47=PD8
+Mcu.Pin48=PD9
+Mcu.Pin49=PD10
 Mcu.Pin5=PI8
-Mcu.Pin50=PD9
-Mcu.Pin51=PD10
-Mcu.Pin52=PD11
-Mcu.Pin53=PD12
-Mcu.Pin54=PD13
-Mcu.Pin55=PD14
-Mcu.Pin56=PG2
-Mcu.Pin57=PG3
-Mcu.Pin58=PC6
-Mcu.Pin59=PC7
+Mcu.Pin50=PD11
+Mcu.Pin51=PD12
+Mcu.Pin52=PD13
+Mcu.Pin53=PD14
+Mcu.Pin54=PG2
+Mcu.Pin55=PG3
+Mcu.Pin56=PC6
+Mcu.Pin57=PC7
+Mcu.Pin58=PC8
+Mcu.Pin59=PC9
 Mcu.Pin6=PC13
-Mcu.Pin60=PC8
-Mcu.Pin61=PC9
-Mcu.Pin62=PA8
-Mcu.Pin63=PA9
-Mcu.Pin64=PA10
-Mcu.Pin65=PA11
-Mcu.Pin66=PA12
-Mcu.Pin67=PA13
-Mcu.Pin68=PH13
-Mcu.Pin69=PH14
-Mcu.Pin7=PC14/OSC32_IN
-Mcu.Pin70=PH15
-Mcu.Pin71=PI1
-Mcu.Pin72=PI3
-Mcu.Pin73=PA14
-Mcu.Pin74=PA15
-Mcu.Pin75=PC10
-Mcu.Pin76=PC11
-Mcu.Pin77=PC12
-Mcu.Pin78=PD0
-Mcu.Pin79=PD1
-Mcu.Pin8=PC15/OSC32_OUT
-Mcu.Pin80=PD2
-Mcu.Pin81=PD3
-Mcu.Pin82=PD4
-Mcu.Pin83=PD5
-Mcu.Pin84=PD6
-Mcu.Pin85=PD7
-Mcu.Pin86=PG9
-Mcu.Pin87=PG10
-Mcu.Pin88=PG11
-Mcu.Pin89=PG12
-Mcu.Pin9=PI9
-Mcu.Pin90=PG13
-Mcu.Pin91=PG14
-Mcu.Pin92=PG15
-Mcu.Pin93=PB3
-Mcu.Pin94=PB4
-Mcu.Pin95=PB5
-Mcu.Pin96=PB8
-Mcu.Pin97=PB9
-Mcu.Pin98=PE0
-Mcu.Pin99=PE1
-Mcu.PinsNb=109
+Mcu.Pin60=PA9
+Mcu.Pin61=PA10
+Mcu.Pin62=PA11
+Mcu.Pin63=PA12
+Mcu.Pin64=PA13
+Mcu.Pin65=PH13
+Mcu.Pin66=PH14
+Mcu.Pin67=PH15
+Mcu.Pin68=PI1
+Mcu.Pin69=PI3
+Mcu.Pin7=PI9
+Mcu.Pin70=PA14
+Mcu.Pin71=PA15
+Mcu.Pin72=PC10
+Mcu.Pin73=PC11
+Mcu.Pin74=PC12
+Mcu.Pin75=PD0
+Mcu.Pin76=PD1
+Mcu.Pin77=PD2
+Mcu.Pin78=PD3
+Mcu.Pin79=PD4
+Mcu.Pin8=PI10
+Mcu.Pin80=PD5
+Mcu.Pin81=PD6
+Mcu.Pin82=PD7
+Mcu.Pin83=PG9
+Mcu.Pin84=PG10
+Mcu.Pin85=PG11
+Mcu.Pin86=PG12
+Mcu.Pin87=PG13
+Mcu.Pin88=PG14
+Mcu.Pin89=PG15
+Mcu.Pin9=PI11
+Mcu.Pin90=PB3
+Mcu.Pin91=PB4
+Mcu.Pin92=PB5
+Mcu.Pin93=PB8
+Mcu.Pin94=PB9
+Mcu.Pin95=PE0
+Mcu.Pin96=PE1
+Mcu.Pin97=PI4
+Mcu.Pin98=PI5
+Mcu.Pin99=PI6
+Mcu.PinsNb=106
 Mcu.UserName=STM32F427IGTx
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SysTick_IRQn=true\:0\:0
@@ -166,12 +163,6 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
-PA8.GPIO_Mode=GPIO_MODE_AF_PP
-PA8.GPIO_PuPd=GPIO_NOPULL
-PA8.GPIO_Speed=GPIO_SPEED_FAST
-PA8.Mode=Clock-out-1
-PA8.Signal=RCC_MCO_1
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
@@ -205,10 +196,6 @@ PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC13.Locked=true
 PC13.Signal=GPIO_Input
-PC14/OSC32_IN.Mode=LSE-External-Oscillator
-PC14/OSC32_IN.Signal=RCC_OSC32_IN
-PC15/OSC32_OUT.Mode=LSE-External-Oscillator
-PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC6.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
 PC6.GPIO_Label=RGB_LED1_R
 PC6.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
@@ -480,14 +467,13 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,PLLM,HSI_VALUE,PLLQ,PLLSource,LSI_VALUE,RCC_MCO1Source
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.PLLM=25
 RCC.PLLN=336
 RCC.PLLQ=7
-RCC.PLLSource=RCC_PLLSOURCE_HSE
-RCC.RCC_MCO1Source=RCC_MCO1SOURCE_LSE
+RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
+RCC.RCC_MCODiv1=RCC_MCODIV_5
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 SH.ADCx_IN10.0=ADC1_IN10,IN10
 SH.ADCx_IN10.ConfNb=1
@@ -525,29 +511,41 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
-SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
+SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
+SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
+SPI1.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI2.CalculateBaudRate-Full_Duplex_Master=21.0 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
+SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
+SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
+SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
+SPI2.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI3.CalculateBaudRate-Full_Duplex_Master=21.0 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
+SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
+SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
+SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
+SPI3.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI4.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
+SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
+SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
+SPI4.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI5.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
+SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
+SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
+SPI5.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
-SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_2
-SPI6.CalculateBaudRate-Full_Duplex_Master=42.0 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master
+SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
+SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
+SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
+SPI6.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -556,7 +554,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -585,7 +583,7 @@ TIM3.OCPolarity_2-PWM\ Generation2\ CH2=TIM_OCPOLARITY_LOW
 TIM3.OCPolarity_3-PWM\ Generation3\ CH3=TIM_OCPOLARITY_LOW
 TIM3.OCPolarity_4-PWM\ Generation4\ CH4=TIM_OCPOLARITY_LOW
 TIM3.Period=1000
-TIM3.Prescaler=10500
+TIM3.Prescaler=1000
 TIM3.Pulse-PWM\ Generation1\ CH1=500
 TIM3.Pulse-PWM\ Generation2\ CH2=500
 TIM3.Pulse-PWM\ Generation3\ CH3=500
@@ -598,7 +596,7 @@ TIM4.OCPolarity_1-PWM\ Generation1\ CH1=TIM_OCPOLARITY_LOW
 TIM4.OCPolarity_2-PWM\ Generation2\ CH2=TIM_OCPOLARITY_LOW
 TIM4.OCPolarity_3-PWM\ Generation3\ CH3=TIM_OCPOLARITY_LOW
 TIM4.Period=1000
-TIM4.Prescaler=10500
+TIM4.Prescaler=1000
 TIM4.Pulse-PWM\ Generation1\ CH1=500
 TIM4.Pulse-PWM\ Generation2\ CH2=500
 TIM4.Pulse-PWM\ Generation3\ CH3=500
@@ -610,14 +608,14 @@ TIM5.OCPolarity_1-PWM\ Generation1\ CH1=TIM_OCPOLARITY_LOW
 TIM5.OCPolarity_2-PWM\ Generation2\ CH2=TIM_OCPOLARITY_LOW
 TIM5.OCPolarity_3-PWM\ Generation3\ CH3=TIM_OCPOLARITY_LOW
 TIM5.Period=1000
-TIM5.Prescaler=10500
+TIM5.Prescaler=1000
 TIM5.Pulse-PWM\ Generation1\ CH1=500
 TIM5.Pulse-PWM\ Generation2\ CH2=500
 TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -625,7 +623,7 @@ TIM8.OCPolarity_1-PWM\ Generation1\ CH1=TIM_OCPOLARITY_LOW
 TIM8.OCPolarity_2-PWM\ Generation2\ CH2=TIM_OCPOLARITY_LOW
 TIM8.OCPolarity_3-PWM\ Generation3\ CH3=TIM_OCPOLARITY_LOW
 TIM8.Period=1000
-TIM8.Prescaler=21000
+TIM8.Prescaler=1000
 TIM8.Pulse-PWM\ Generation1\ CH1=500
 TIM8.Pulse-PWM\ Generation2\ CH2=500
 TIM8.Pulse-PWM\ Generation3\ CH3=500
