--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,5 +1,5 @@
 #MicroXplorer Configuration settings - do not modify
-#Wed Aug 13 10:21:21 CDT 2014
+#Mon Aug 18 20:54:36 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
@@ -157,21 +157,45 @@ PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA5.GPIO_Mode=GPIO_MODE_AF_PP
+PA5.GPIO_PuPd=GPIO_NOPULL
+PA5.GPIO_Speed=GPIO_SPEED_MEDIUM
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA6.GPIO_Mode=GPIO_MODE_AF_PP
+PA6.GPIO_PuPd=GPIO_NOPULL
+PA6.GPIO_Speed=GPIO_SPEED_MEDIUM
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PA7.GPIO_Mode=GPIO_MODE_AF_PP
+PA7.GPIO_PuPd=GPIO_NOPULL
+PA7.GPIO_Speed=GPIO_SPEED_MEDIUM
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
+PB13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB13.GPIO_Mode=GPIO_MODE_AF_PP
+PB13.GPIO_PuPd=GPIO_NOPULL
+PB13.GPIO_Speed=GPIO_SPEED_MEDIUM
 PB13.Locked=true
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB14.GPIO_Mode=GPIO_MODE_AF_PP
+PB14.GPIO_PuPd=GPIO_NOPULL
+PB14.GPIO_Speed=GPIO_SPEED_MEDIUM
 PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
+PB15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PB15.GPIO_Mode=GPIO_MODE_AF_PP
+PB15.GPIO_PuPd=GPIO_NOPULL
+PB15.GPIO_Speed=GPIO_SPEED_MEDIUM
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
@@ -188,10 +212,22 @@ PB9.Signal=GPIO_Output
 PC0.Signal=ADCx_IN10
 PC1.Locked=true
 PC1.Signal=GPIO_Input
+PC10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC10.GPIO_Mode=GPIO_MODE_AF_PP
+PC10.GPIO_PuPd=GPIO_NOPULL
+PC10.GPIO_Speed=GPIO_SPEED_MEDIUM
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
+PC11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC11.GPIO_Mode=GPIO_MODE_AF_PP
+PC11.GPIO_PuPd=GPIO_NOPULL
+PC11.GPIO_Speed=GPIO_SPEED_MEDIUM
 PC11.Mode=Full_Duplex_Master
 PC11.Signal=SPI3_MISO
+PC12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PC12.GPIO_Mode=GPIO_MODE_AF_PP
+PC12.GPIO_PuPd=GPIO_NOPULL
+PC12.GPIO_Speed=GPIO_SPEED_MEDIUM
 PC12.Mode=Full_Duplex_Master
 PC12.Signal=SPI3_MOSI
 PC13.Locked=true
@@ -314,14 +350,26 @@ PE14.GPIO_ModeDefaultPP=GPIO_MODE_AF_OD
 PE14.GPIO_PuPd=GPIO_PULLUP
 PE14.GPIO_Speed=GPIO_SPEED_LOW
 PE14.Signal=S_TIM1_CH4
+PE2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE2.GPIO_Mode=GPIO_MODE_AF_PP
+PE2.GPIO_PuPd=GPIO_NOPULL
+PE2.GPIO_Speed=GPIO_SPEED_MEDIUM
 PE2.Mode=Full_Duplex_Master
 PE2.Signal=SPI4_SCK
 PE3.Locked=true
 PE3.Signal=GPIO_Output
 PE4.Locked=true
 PE4.Signal=GPIO_Output
+PE5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE5.GPIO_Mode=GPIO_MODE_AF_PP
+PE5.GPIO_PuPd=GPIO_NOPULL
+PE5.GPIO_Speed=GPIO_SPEED_MEDIUM
 PE5.Mode=Full_Duplex_Master
 PE5.Signal=SPI4_MISO
+PE6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PE6.GPIO_Mode=GPIO_MODE_AF_PP
+PE6.GPIO_PuPd=GPIO_NOPULL
+PE6.GPIO_Speed=GPIO_SPEED_MEDIUM
 PE6.Mode=Full_Duplex_Master
 PE6.Signal=SPI4_MOSI
 PE9.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultPP,GPIO_PuPd
@@ -346,20 +394,44 @@ PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.Locked=true
 PF6.Signal=GPIO_Output
+PF7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PF7.GPIO_Mode=GPIO_MODE_AF_PP
+PF7.GPIO_PuPd=GPIO_NOPULL
+PF7.GPIO_Speed=GPIO_SPEED_MEDIUM
 PF7.Mode=Full_Duplex_Master
 PF7.Signal=SPI5_SCK
+PF8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PF8.GPIO_Mode=GPIO_MODE_AF_PP
+PF8.GPIO_PuPd=GPIO_NOPULL
+PF8.GPIO_Speed=GPIO_SPEED_MEDIUM
 PF8.Mode=Full_Duplex_Master
 PF8.Signal=SPI5_MISO
+PF9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PF9.GPIO_Mode=GPIO_MODE_AF_PP
+PF9.GPIO_PuPd=GPIO_NOPULL
+PF9.GPIO_Speed=GPIO_SPEED_MEDIUM
 PF9.Mode=Full_Duplex_Master
 PF9.Signal=SPI5_MOSI
 PG10.Locked=true
 PG10.Signal=GPIO_Input
 PG11.Locked=true
 PG11.Signal=GPIO_Input
+PG12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PG12.GPIO_Mode=GPIO_MODE_AF_PP
+PG12.GPIO_PuPd=GPIO_NOPULL
+PG12.GPIO_Speed=GPIO_SPEED_MEDIUM
 PG12.Mode=Full_Duplex_Master
 PG12.Signal=SPI6_MISO
+PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PG13.GPIO_Mode=GPIO_MODE_AF_PP
+PG13.GPIO_PuPd=GPIO_NOPULL
+PG13.GPIO_Speed=GPIO_SPEED_MEDIUM
 PG13.Mode=Full_Duplex_Master
 PG13.Signal=SPI6_SCK
+PG14.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
+PG14.GPIO_Mode=GPIO_MODE_AF_PP
+PG14.GPIO_PuPd=GPIO_NOPULL
+PG14.GPIO_Speed=GPIO_SPEED_MEDIUM
 PG14.Mode=Full_Duplex_Master
 PG14.Signal=SPI6_MOSI
 PG15.GPIOParameters=GPIO_PuPd,GPIO_Mode
@@ -467,7 +539,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCODiv1,RCC_MCO1Source
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLN=336
@@ -515,37 +587,37 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
 SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
 SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI3.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI4.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI5.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI6.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -554,7 +626,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -615,7 +687,7 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
