Saving SPI6 DMA attempt.
Signed-off-by: Anthony Clay <anthony.clay@zarthcode.com>

--- a/Configuration/Configuration.ioc
+++ b/Configuration/Configuration.ioc
@@ -1,32 +1,58 @@
 #MicroXplorer Configuration settings - do not modify
-#Mon Aug 18 20:54:36 CDT 2014
+#Fri Aug 22 21:20:48 CDT 2014
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
 ADC1.IPParameters=Channel-0\#ChannelRegularConversion,master,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
 ADC1.master=1
+Dma.Request0=SPI6_RX
+Dma.Request1=SPI6_TX
+Dma.RequestsNb=2
+Dma.SPI6_RX.0.Channel=DMA_CHANNEL_1
+Dma.SPI6_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.0.Instance=DMA2_Stream6
+Dma.SPI6_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.0.MemInc=DMA_MINC_DISABLE
+Dma.SPI6_RX.0.Mode=DMA_NORMAL
+Dma.SPI6_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.0.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_TX.1.Channel=DMA_CHANNEL_1
+Dma.SPI6_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI6_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_TX.1.Instance=DMA2_Stream5
+Dma.SPI6_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_TX.1.MemInc=DMA_MINC_DISABLE
+Dma.SPI6_TX.1.Mode=DMA_NORMAL
+Dma.SPI6_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI6_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_TX.1.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI6_TX.1.RequestParameters=Instance,Channel,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=4
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=I2C2
-Mcu.IP10=SPI6
-Mcu.IP11=SYS
-Mcu.IP12=TIM1
-Mcu.IP13=TIM3
-Mcu.IP14=TIM4
-Mcu.IP15=TIM5
-Mcu.IP16=TIM8
-Mcu.IP17=USART2
-Mcu.IP18=USB_OTG_FS
-Mcu.IP2=I2C3
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SPI2
-Mcu.IP7=SPI3
-Mcu.IP8=SPI4
-Mcu.IP9=SPI5
-Mcu.IPNb=19
+Mcu.IP1=DMA
+Mcu.IP10=SPI5
+Mcu.IP11=SPI6
+Mcu.IP12=SYS
+Mcu.IP13=TIM1
+Mcu.IP14=TIM3
+Mcu.IP15=TIM4
+Mcu.IP16=TIM5
+Mcu.IP17=TIM8
+Mcu.IP18=USART2
+Mcu.IP19=USB_OTG_FS
+Mcu.IP2=I2C2
+Mcu.IP3=I2C3
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SPI2
+Mcu.IP8=SPI3
+Mcu.IP9=SPI4
+Mcu.IPNb=20
 Mcu.Name=STM32F427I(G-I)Tx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE2
@@ -539,7 +565,7 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.FamilyName=M
 RCC.HSE_VALUE=25000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCO1Source,RCC_MCODiv1
+RCC.IPParameters=,FamilyName,APB2CLKDivider,LSE_VALUE,SYSCLKSource,APB1CLKDivider,PLLN,HSE_VALUE,HSI_VALUE,PLLQ,LSI_VALUE,RCC_MCODiv1,RCC_MCO1Source
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.PLLN=336
@@ -587,37 +613,37 @@ SPI1.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI1.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI1.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI1.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI2.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
 SPI2.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI2.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI2.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI2.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI3.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_8
 SPI3.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI3.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI3.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI3.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI3.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI4.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI4.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI4.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI4.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI4.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI4.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI5.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI5.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI5.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI5.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI5.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI5.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 SPI6.BaudRatePrescaler-Full_Duplex_Master=SPI_BAUDRATEPRESCALER_16
 SPI6.CLKPhase-Full_Duplex_Master=SPI_PHASE_2EDGE
 SPI6.CLKPolarity-Full_Duplex_Master=SPI_POLARITY_HIGH
 SPI6.CalculateBaudRate-Full_Duplex_Master=5.25 MBits/s
-SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
+SPI6.IPParameters=CalculateBaudRate-Full_Duplex_Master,BaudRatePrescaler-Full_Duplex_Master,Mode-Full_Duplex_Master,CLKPolarity-Full_Duplex_Master,CLKPhase-Full_Duplex_Master
 SPI6.Mode-Full_Duplex_Master=SPI_MODE_MASTER
 TIM1.AutomaticOutput=TIM_AUTOMATICOUTPUT_DISABLE
 TIM1.BreakPolarity=TIM_BREAKPOLARITY_LOW
@@ -626,7 +652,7 @@ TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,BreakPolarity,AutomaticOutput,OCPolarity_4-PWM Generation4 CH4,BreakState,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM1.IPParameters=Pulse-PWM Generation1 CH1,OffStateIDLEMode,OCIdleState_1-PWM Generation1 CH1,TIM_MasterSlaveMode,Period,Prescaler,OffStateRunMode,Channel-PWM Generation4 CH4,AutomaticOutput,BreakPolarity,BreakState,OCPolarity_4-PWM Generation4 CH4,TIM_MasterOutputTrigger,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation4 CH4,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,OCIdleState_4-PWM Generation4 CH4,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM1.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM1.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
@@ -687,7 +713,7 @@ TIM5.Pulse-PWM\ Generation3\ CH3=500
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.ClockDivision=TIM_CLOCKDIVISION_DIV4
-TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,Channel-PWM Generation2 CH2,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
+TIM8.IPParameters=Pulse-PWM Generation1 CH1,OCIdleState_1-PWM Generation1 CH1,Period,Prescaler,OCPolarity_2-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,ClockDivision,OCIdleState_3-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,OCPolarity_1-PWM Generation1 CH1,OCPolarity_3-PWM Generation3 CH3,Pulse-PWM Generation2 CH2,OCIdleState_2-PWM Generation2 CH2
 TIM8.OCIdleState_1-PWM\ Generation1\ CH1=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_2-PWM\ Generation2\ CH2=TIM_OCIDLESTATE_SET
 TIM8.OCIdleState_3-PWM\ Generation3\ CH3=TIM_OCIDLESTATE_SET
